# vclib-lines-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_output.csv  benchmark_output1.csv  benchmark_output2.csv  benchmark_output4.csv  edges.csv  generate_csv.py  generate_graph.py  imgui.ini  nodes.csv  plot_diagram.py  shortest_path.csv  test.py
data/: benchmark_output3.csv  bm_out_CPU.csv  bm_out_GPU.csv  bm_out_Indirect.csv  bm_out_Instancing.csv  bm_out_Texture.csv
data/dynamic/: bm_out_CPU.csv  bm_out_GPU.csv  bm_out_Indirect.csv  bm_out_Instancing.csv  bm_out_Texture.csv
data/old/: benchmark_output0.csv
data/static/: bm_out_CPU.csv  bm_out_GPU.csv  bm_out_Indirect.csv  bm_out_Instancing.csv  bm_out_Texture.csv
include/: demo_application.h  lines_cube_object.h  lines_object_handler.h  lines_objects_handler.h  lines_settings_handler.h  render_utils.h  tests_handler.h
include/lines_objects_handlers/: graph_handler.h  lines_cube_handler.h  mesh_handler.h  polylines_cube_handler.h
shaders/: varying.def.sc  vs_cube.sc
src/: main.cpp
src/lines_objects_handlers/: graph_handler.cpp  lines_cube_handler.cpp  mesh_handler.cpp  polylines_cube_handler.cpp
